# c_lang_project

./: .gitattributes  .gitignore  .gitmodules  .local-dir.el  Makefile  Makefile.am  README.md  Readme.md  bootstrap.sh  compile_commands.json  configure.ac  make-deps.sh  valgrind.supp
Docs/: C_code_style.md  C_lang_notes.txt  bibliography.md  git_submodules.md  introduction.md  spacemacs.md
Docs/api/: README
config/: astyle-code-format.cfg  cppcheck.supp
config/githooks/: README.md
dev_ops/: REAME
docs/: Bibliography.md  C_code_style.md  C_lang_notes.txt
m4/: cflags.m4  doxygen.m4  doxygen.mk  gdb.m4  gdb.mk  ldflags.m4  valgrind.m4  valgrind.mk
src/common/: Makefile.defs  REDME
src/common/data_structs/: Makefile
src/common/data_structs/include/common/data_structs/: array.h  arrayrep.h  atom.h  list.h  ring.h  seq.h  set.h  stack.h  table.h
src/common/data_structs/include/data_structs/: arrayrep.h  list.h  set.h  table.h
src/common/data_structs/src/: array.c  atom.c  list.c  ring.c  seq.c  set.c  stack.c  table.c
src/common/data_structs/test/: Makefile  test_list.c  test_stack.c
src/common/data_structs/test/src/: test_list.c  test_stack.c
src/common/lang/: Makefile
src/common/lang/include/common/lang/: assert.h  except.h  mem.h  unused.h
src/common/lang/include/lang/: assert.h
src/common/lang/src/: assert.c  except.c  mem-dev.c  mem.c
src/common/lang/test/: README
src/common/math/: Makefile
src/common/math/arith/: Makefile
src/common/math/arith/include/common/math/: arith.h
src/common/math/arith/src/: arith.c
src/common/math/arith/test/: Makefile  test_arith.c
src/common/math/include/common/math/: arith.h
src/common/math/src/: arith.c
src/common/math/test/: Makefile  test_arith.c
src/common/src/cii/: Makefile  README  basename  calc  cref  double  idents  ids  iref  kref  mpcalc  wf  words  xref
src/common/src/cii/examples/: sort.c
src/common/src/cii/src/: arena.c
src/core/: README.md
src/ext-libs/: README
src/infrastr/: README
src/libs/: Makefile.am
src/libs/algorithms/: Makefile.am  minmax.c
src/libs/algorithms/include/algorithms/: array.h
src/libs/data_structs/: Makefile.am  Readme.md  array_stack.c  binary_tree.c  circ_list.c  double_list.c  graph_adj_list.c  heap.c  list.c  list_rep.c  list_stack.c  queue.c  sparse_matrix.c  try1.c  try2.c
src/libs/data_structs/include/data_structs/: binary_tree.h  circ_list.h  double_list.h  graph_adj_list.h  graph_rep.h  heap.h  list.h  list_rep.h  list_stack.h  queue.h  sparse_matrix.h  stack.h  try.h  try_impl_1.h  try_impl_2.h
src/libs/data_structs/test/: array_stack.c  binary_tree.c  circ_list.c  double_list.c  heap.c  list.c  list_stack.c  queue.c  sparse_matrix.c  test_data.h  try.c
src/libs/lang/: Makefile.am  arena.c  assert.c  atom.c  except.c  mem-dev.c  mem.c  memory-dev.c  memory.c
src/libs/lang/include/lang/: arena.h  assert.h  atom.h  debug.h  except.h  extend.h  macros.h  mem.h  memory.h
src/libs/lang/include/lang/test/: README
src/libs/lang/test/: README  assert.c  assert_h.c  except.c  except_h.c  macros_h.c  mem-dev.c  mem_h.c  memory-dev.c  memory_h.c
src/libs/logger/: Makefile.am  log.c
src/libs/logger/include/logger/: log.h
src/macros/include/macros/: arrays.h  bits.h  debug.h  lang.h  math.h  string.h  struct.h
test/: README.md
tools-setup/: Doxyfile  Doxyfile.in  astylerc  cppcheck.supp  spacemacs  valgrind-mem-dev.supp  valgrind-test.supp
