## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = liblogger.la
liblogger_la_SOURCES = log.c
liblogger_la_CFLAGS = -I$(top_srcdir)/src/libs/logger/include

# ______________________________________________________________________________

MAINTAINERCLEANFILES = Makefile.in
